# RatingService

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
Sources/: Asio.cpp  Asio.hpp  CMakeLists.txt  Data.hpp  Factory.cpp  Factory.hpp  Handlers.hpp  IAsio.hpp  IData.hpp  IFactory.hpp  IManager.hpp  IService.hpp  IWorker.hpp  Manager.cpp  Manager.hpp  RawMessageTools.hpp  Service.cpp  Service.hpp  Types.hpp  Worker.hpp  main.cpp
Sources/Header/: Asio.hpp  Factory.hpp  Manager.hpp  RawMessageTools.hpp  Worker.hpp
Sources/Interface/: IAsio.hpp  IData.hpp  IFactory.hpp  IManager.hpp  IService.hpp
Sources/Tests/: CMakeLists.txt  ManagerTests.cpp  Mocks.hpp  ServiceTests.cpp  WorkerTests.cpp  main.cpp
